launch-test-lily did not have enough perm gen space.
Strangely enough in the older cdh4 branch the same change was made to process/server/pom.xml but I don't notice any problem with the lily-server process so far.